[package]
name = "hyper-alpn"
version = "0.3.0"
authors = [
    "Harry Bairstow <harry@walletconnect.com>",
    "Julius de Bruijn <julius@nauk.io>"
]
license = "MIT"
readme  = "README.md"
description = "An ALPN implementation to be used with Hyper 0.12"
keywords = ["hyper", "alpn", "http2", "h2"]
repository = "https://github.com/walletconnect/hyper-alpn.git"
homepage = "https://github.com/walletconnect/hyper-alpn"
documentation = "https://docs.rs/hyper-alpn/"
edition = "2018"

[dependencies]
rustls = "0.19"
webpki = "0.21"
webpki-roots = "0.21"
log = "0.4"

futures = "0.3"
tokio-rustls = "0.22"
tokio = { version = "1", features = ["net"] }
hyper = { version = "0.14", features = ["client"] }

[dev-dependencies]
openssl = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
